# GraphOffline

./: .gitignore  CGIProcessor.cpp  CGIProcessor.h  CMakeLists.txt  GraphOffline.cpp  GraphOffline.sln  GraphOffline.vcproj  GraphOffline.vcxproj  GraphOffline.vcxproj.filters  Graphoffline.Emscripten.sln  Graphoffline.Emscripten.vcxproj  Graphoffline.Emscripten.vcxproj.filters  IAlgorithmFactory.h  README.md  WeightMultiGraph.h  makefile  makefile-emcc  makefile-static
.github/workflows/: c-cpp.yml  emsdk.yml  emsdk_build_artifact.yml  emsdk_build_artifact_debug.yml  msbuild.yml
Graphoffline.xcodeproj/: project.pbxproj
Graphoffline.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
algorithm/: AlgorithmFactory.cpp  AlgorithmFactory.h  BaseAlgorithm.cpp  BaseAlgorithm.h  BellmanFord.h  BellmanFordImpl.h  ConnectedComponent.cpp  ConnectedComponent.h  DijkstraShortPath.cpp  DijkstraShortPath.h  DijkstraShortPathImpl.h  EulerianLoop.cpp  EulerianLoop.h  EulerianPath.cpp  EulerianPath.h  GraphLoadTest.cpp  GraphLoadTest.h  HamiltonianLoop.cpp  HamiltonianLoop.h  IAlgorithm.h  IsomorphismCheck.cpp  IsomorphismCheck.h  MaxClique.cpp  MaxClique.h  MaxFlowPushRelabel.h  MaxFlowPushRelableImpl.h  MaxIndependentSet.cpp  MaxIndependentSet.h  PrintAllPaths.cpp  PrintAllPaths.h
common/: Buffer.h  CaseFunctions.cpp  CaseFunctions.h  ConsoleParams.cpp  ConsoleParams.h  FileReader.h  Logger.cpp  Logger.h  RefCounter.h  Utils.h  YString.cpp  YString.h
graph/: Graph.cpp  Graph.h  GraphImpl.h  IGraph.h  IRelease.h  MultiGraph.cpp  MultiGraph.h  WeightGraph.h
lib/: CBioInfCpp.h
report/: ConsoleReporter.h  GraphMLReporter.cpp  GraphMLReporter.h  IReporter.h  ReporterFactory.cpp  ReporterFactory.h
test/: anna.col  create_emscripted_tests.py  edges-to-xml.cpp  emscripted_test_output.html  emscripted_test_template.html  graph_direct.xml  graph_direct.xml.res  graph_float_weight.xml.res  graph_float_weight2.xml.res  graph_shortPath_3.xml.res  graph_weight.xml.res  graph_weight_3.xml.res  graph_weight_4.xml.res  graph_weight_5.xml.res  runBenchmark.sh  runTestCGI.bat  runTestCGI.sh  runTests.bat  runTests.sh  testList.txt
test/BellmanFord/: _runTests.bat  _runTests.sh  graph_direct.xml.res  graph_float_weight.xml  graph_float_weight.xml.res  graph_float_weight2.xml.res  graph_negative_6_vertex.xml  graph_negative_6_vertex.xml.res  graph_shortPath.xml.res  graph_shortPath_2.xml  graph_shortPath_2.xml.res  graph_shortPath_3.xml.res  graph_weight.xml.res  graph_weight_2.xml  graph_weight_2.xml.res  graph_weight_3.xml  graph_weight_3.xml.res  graph_weight_4.xml  graph_weight_4.xml.res  graph_weight_4_multigraph.xml.res  graph_weight_4_multigraph2.xml.res  graph_weight_4_multigraph2_negative.xml.res  graph_weight_4_multigraph3.xml.res  graph_weight_5.xml.res  graph_weight_negative.xml  graph_weight_negative.xml.res  graph_weight_negative_simple.xml  graph_weight_negative_simple.xml.res  testList.txt  testList_full.txt
test/CGI/: _runTests.bat  _runTests.sh  elpath_graph7.xml  elpath_graph7.xml.cgi.res  graph6.xml  graph6.xml.cgi.res  graph_shortPath_3.xml  graph_shortPath_3.xml.cgi.res  runTests.sh
test/ConnectedComponents/: _runTests.bat  _runTests.sh  graph0.xml  graph0.xml.res  graph1.xml  graph1_strong.xml  graph2.xml  graph2_strong.xml  graph2_strong.xml.res  graph3.xml  graph3.xml.res  graph3_strong.xml  graph4.xml  graphBig.xml  testList.txt  testList_full.txt
test/DijkstraShortPath/: _runTests.bat  _runTests.sh  graph3_multigraph.xml.res  graph_direct.xml.res  graph_float_weight.xml.res  graph_float_weight2.xml.res  graph_shortPath.xml  graph_shortPath.xml.res  graph_shortPath_2.xml.res  graph_shortPath_3.xml.cgi.res  graph_shortPath_3.xml.res  graph_weight_2.xml.res  graph_weight_3.xml  graph_weight_3.xml.res  graph_weight_4_multigraph.xml  graph_weight_4_multigraph.xml.res  graph_weight_4_multigraph2.xml  graph_weight_4_multigraph2.xml.res  graph_weight_4_multigraph2_negative.xml  graph_weight_4_multigraph2_negative.xml.res  graph_weight_4_multigraph3.xml.res  graph_weight_4_multigraph_zero_and_negative.xml  graph_weight_4_multigraph_zero_and_negative.xml.res  graph_weight_5.xml.res  graph_weight_negative.xml.res  testList.txt  testList_full.txt
test/EulerianLoop/: graph3_no.xml  graph4_direct.xml  graph4_direct.xml.res  graph4_undirect.xml  graph4_undirect.xml.res  graph5_direct.xml  graph5_undirect.xml  graph6.xml.res  graph6_2_direct.xml  graph6_2_direct.xml.res  graph6_2_undirect.xml  graph6_2_undirect.xml.res  graph6_undirect.xml  graph6_undirect.xml.res  (+6 more)
(+233 files in other folders)
